# testing-idx

.idx/: dev.nix
market-data-demo/: pyproject.toml
