[tool.poetry]
name = "market-data-demo"
version = "0.1.0"
description = ""
authors = ["jerrisonli <jerrisonli@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.2"
numpy = "^1.26.4"
black = "^24.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
